--- a/YourCityEvents/Screens/Profile/Cell/UserCell.xib
+++ b/YourCityEvents/Screens/Profile/Cell/UserCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,15 +12,12 @@
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="167" id="qmH-M4-Dxc" customClass="UserCell" customModule="YourCityEvents" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="388" height="167"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qmH-M4-Dxc" id="FNr-7F-zNE">
-                <rect key="frame" x="0.0" y="0.0" width="388" height="166.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qmH-M4-Dxc" id="FNr-7F-zNE">
+                <rect key="frame" x="0.0" y="0.0" width="388" height="167"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Sro-4l-NMa">
-                        <rect key="frame" x="0.0" y="0.0" width="388" height="247.5"/>
-                    </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aom-le-f9W">
-                        <rect key="frame" x="20" y="20" width="348" height="131"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aom-le-f9W" customClass="ShadowView" customModule="YourCityEvents" customModuleProvider="target">
+                        <rect key="frame" x="20" y="20" width="348" height="130.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="VTQ-yy-A8N">
                                 <rect key="frame" x="20" y="15.5" width="100" height="100"/>
@@ -68,10 +63,6 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Sro-4l-NMa" firstAttribute="leading" secondItem="FNr-7F-zNE" secondAttribute="leading" id="5Vu-Kd-wlY"/>
-                    <constraint firstItem="Sro-4l-NMa" firstAttribute="top" secondItem="FNr-7F-zNE" secondAttribute="top" id="Bvb-qf-hRb"/>
-                    <constraint firstAttribute="bottom" secondItem="Sro-4l-NMa" secondAttribute="bottom" id="DNM-tl-Uia"/>
-                    <constraint firstAttribute="trailing" secondItem="Sro-4l-NMa" secondAttribute="trailing" id="X8w-tL-yYL"/>
                     <constraint firstAttribute="trailing" secondItem="aom-le-f9W" secondAttribute="trailing" constant="20" id="giW-VN-dke"/>
                     <constraint firstItem="aom-le-f9W" firstAttribute="top" secondItem="FNr-7F-zNE" secondAttribute="top" constant="20" id="nIV-Es-jxl"/>
                     <constraint firstItem="aom-le-f9W" firstAttribute="leading" secondItem="FNr-7F-zNE" secondAttribute="leading" constant="20" id="nzb-Rv-ETy"/>
@@ -91,6 +82,5 @@
     </objects>
     <resources>
         <image name="profile" width="16" height="16"/>
-        <image name="profileBackground" width="375" height="247"/>
     </resources>
 </document>
