--- a/YourCityEvents/Screens/Profile/Controller/ProfileVC.xib
+++ b/YourCityEvents/Screens/Profile/Controller/ProfileVC.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,19 +20,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l9X-hb-2Ub">
-                    <rect key="frame" x="0.0" y="170" width="320" height="398"/>
+                    <rect key="frame" x="0.0" y="150" width="320" height="418"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhe-vg-3Bb" customClass="PlaceholderView" customModule="YourCityEvents" customModuleProvider="target">
-                    <rect key="frame" x="10" y="216.5" width="300" height="305"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="300" id="59Y-ce-ayk"/>
-                        <constraint firstAttribute="height" constant="305" id="O1G-zT-ya3"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3B-5u-dB7">
-                    <rect key="frame" x="0.0" y="20" width="320" height="150"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileBackground" translatesAutoresizingMaskIntoConstraints="NO" id="l6A-iO-n0K">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
@@ -100,8 +90,6 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="l9X-hb-2Ub" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="FxN-JY-4hB"/>
-                <constraint firstItem="mhe-vg-3Bb" firstAttribute="centerY" secondItem="l9X-hb-2Ub" secondAttribute="centerY" id="Lqx-0H-I6r"/>
-                <constraint firstItem="mhe-vg-3Bb" firstAttribute="centerX" secondItem="l9X-hb-2Ub" secondAttribute="centerX" id="NLU-d4-caa"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="l9X-hb-2Ub" secondAttribute="trailing" id="OIF-Yo-gTt"/>
                 <constraint firstItem="G3B-5u-dB7" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Ri3-na-jjJ"/>
                 <constraint firstItem="G3B-5u-dB7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="dri-Na-eRV"/>
