--- a/YourCityEvents/Screens/Feed/Cell/FeedCell.xib
+++ b/YourCityEvents/Screens/Feed/Cell/FeedCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -20,11 +18,11 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kto-UM-cDO" id="ehP-uR-xgx">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="139.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rwx-pk-gbK">
-                        <rect key="frame" x="18" y="8" width="378" height="123.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rwx-pk-gbK" customClass="ShadowView" customModule="YourCityEvents" customModuleProvider="target">
+                        <rect key="frame" x="18" y="8" width="378" height="124"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome" translatesAutoresizingMaskIntoConstraints="NO" id="PM4-tS-q7n">
                                 <rect key="frame" x="15" y="12" width="100" height="100"/>
@@ -71,12 +69,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="123.5" id="BCl-F2-f0E"/>
+                            <constraint firstItem="Q9N-2z-V5i" firstAttribute="top" secondItem="Rwx-pk-gbK" secondAttribute="top" constant="15" id="Fdb-dN-iP6"/>
+                            <constraint firstItem="PM4-tS-q7n" firstAttribute="top" secondItem="Rwx-pk-gbK" secondAttribute="top" constant="12" id="It8-jD-2NH"/>
                             <constraint firstAttribute="trailing" secondItem="Q9N-2z-V5i" secondAttribute="trailing" constant="15" id="LBf-Hc-tyR"/>
                             <constraint firstItem="PM4-tS-q7n" firstAttribute="leading" secondItem="Rwx-pk-gbK" secondAttribute="leading" constant="15" id="bge-xm-kMt"/>
-                            <constraint firstItem="PM4-tS-q7n" firstAttribute="centerY" secondItem="Rwx-pk-gbK" secondAttribute="centerY" id="cB2-b3-jKD"/>
+                            <constraint firstAttribute="bottom" secondItem="Q9N-2z-V5i" secondAttribute="bottom" constant="15" id="e1Y-jR-Yuh"/>
                             <constraint firstItem="Q9N-2z-V5i" firstAttribute="leading" secondItem="PM4-tS-q7n" secondAttribute="trailing" constant="15" id="eVn-CE-ozo"/>
-                            <constraint firstItem="Q9N-2z-V5i" firstAttribute="centerY" secondItem="PM4-tS-q7n" secondAttribute="centerY" id="mBu-mn-lzL"/>
+                            <constraint firstAttribute="bottom" secondItem="PM4-tS-q7n" secondAttribute="bottom" constant="12" id="vW5-7D-ka2"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -96,7 +95,7 @@
                 <outlet property="myContentView" destination="Rwx-pk-gbK" id="KDa-Ue-YN1"/>
                 <outlet property="titleLabel" destination="L1R-wW-DVh" id="ZUS-jY-fVW"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="182.8125"/>
+            <point key="canvasLocation" x="142" y="179"/>
         </tableViewCell>
     </objects>
     <resources>
