--- a/YourCityEvents/Screens/Profile/Cell/UserCell.xib
+++ b/YourCityEvents/Screens/Profile/Cell/UserCell.xib
@@ -9,40 +9,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="167" id="qmH-M4-Dxc" customClass="UserCell" customModule="YourCityEvents" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="388" height="167"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="qmH-M4-Dxc" customClass="UserCell" customModule="YourCityEvents" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="381" height="170"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qmH-M4-Dxc" id="FNr-7F-zNE">
-                <rect key="frame" x="0.0" y="0.0" width="388" height="167"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qmH-M4-Dxc" id="FNr-7F-zNE">
+                <rect key="frame" x="0.0" y="0.0" width="381" height="170"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aom-le-f9W" customClass="ShadowView" customModule="YourCityEvents" customModuleProvider="target">
-                        <rect key="frame" x="20" y="20" width="348" height="130.5"/>
+                        <rect key="frame" x="20" y="20" width="341" height="130"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="VTQ-yy-A8N">
-                                <rect key="frame" x="20" y="15.5" width="100" height="100"/>
+                                <rect key="frame" x="20" y="15" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="doc-3R-5cG"/>
                                     <constraint firstAttribute="height" constant="100" id="i40-PX-fWG"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sDr-Ko-zU7">
-                                <rect key="frame" x="135" y="16.5" width="197" height="98"/>
+                                <rect key="frame" x="135" y="16" width="190" height="98"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taras Gladiator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKJ-6e-5bY">
-                                        <rect key="frame" x="41" y="0.0" width="115.5" height="20.5"/>
+                                        <rect key="frame" x="37.5" y="0.0" width="115.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kyiv, Ukraine" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EiC-dW-UiL">
-                                        <rect key="frame" x="49.5" y="28.5" width="98" height="20.5"/>
+                                        <rect key="frame" x="46" y="28.5" width="98" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23 y.o web-designer in Apple inc." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qX1-Vj-H7o">
-                                        <rect key="frame" x="9" y="57" width="179" height="41"/>
+                                        <rect key="frame" x="5.5" y="57" width="179" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -54,7 +54,6 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="sDr-Ko-zU7" secondAttribute="trailing" constant="16" id="4fJ-xJ-olR"/>
                             <constraint firstItem="VTQ-yy-A8N" firstAttribute="centerY" secondItem="aom-le-f9W" secondAttribute="centerY" id="8xM-00-ZQ0"/>
-                            <constraint firstAttribute="height" constant="130.5" id="Cmg-me-aH1"/>
                             <constraint firstItem="sDr-Ko-zU7" firstAttribute="centerY" secondItem="VTQ-yy-A8N" secondAttribute="centerY" id="GeB-wh-4K6"/>
                             <constraint firstItem="VTQ-yy-A8N" firstAttribute="leading" secondItem="aom-le-f9W" secondAttribute="leading" constant="20" id="Ugx-D6-2za"/>
                             <constraint firstItem="sDr-Ko-zU7" firstAttribute="leading" secondItem="VTQ-yy-A8N" secondAttribute="trailing" constant="15" id="eag-7o-bNT"/>
@@ -77,7 +76,7 @@
                 <outlet property="nameLabel" destination="LKJ-6e-5bY" id="NNz-xv-B0w"/>
                 <outlet property="userImageView" destination="VTQ-yy-A8N" id="ozN-mj-XzA"/>
             </connections>
-            <point key="canvasLocation" x="-13.043478260869566" y="-52.566964285714285"/>
+            <point key="canvasLocation" x="-18.115942028985508" y="-50.892857142857139"/>
         </tableViewCell>
     </objects>
     <resources>
