--- a/YourCityEvents/Modules/Welcome/View/WelcomeVC.xib
+++ b/YourCityEvents/Modules/Welcome/View/WelcomeVC.xib
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Roboto-Medium.ttf">
-            <string>Roboto-Medium</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WelcomeVC" customModule="YourCityEvents" customModuleProvider="target">
             <connections>
@@ -25,82 +19,27 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="xLS-Ip-lcv">
-                    <rect key="frame" x="10" y="70" width="300" height="149.5"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to YourCityEvents" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VmU-PR-TfR">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="91.5"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="300" id="Duh-V7-7Dv"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="38"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An app which helps you to be always informed about best events of your city" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQW-lj-Apt">
-                            <rect key="frame" x="0.0" y="106.5" width="300" height="43"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="300" id="WUN-Fk-axg"/>
-                                <constraint firstAttribute="height" constant="43" id="cqi-a6-pJQ"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="OdI-dQ-nVw">
+                    <rect key="frame" x="65" y="189" width="190" height="190"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="149.5" id="Upt-Vz-DgM"/>
+                        <constraint firstAttribute="height" constant="190" id="c3f-pE-41M"/>
+                        <constraint firstAttribute="width" constant="190" id="mXE-1F-fPq"/>
                     </constraints>
-                </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38Q-wh-Rcw" customClass="Button" customModule="YourCityEvents" customModuleProvider="target">
-                    <rect key="frame" x="10" y="488" width="300" height="50"/>
-                    <color key="backgroundColor" red="0.14498183131217957" green="0.11021433025598526" blue="0.6353345513343811" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="5GA-SA-9yh"/>
-                        <constraint firstAttribute="width" constant="300" id="q3x-l2-nk8"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="24"/>
-                    <state key="normal" title="Get started">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                    <connections>
-                        <action selector="getStartedPressed" destination="-1" eventType="touchUpInside" id="ANP-A7-xf6"/>
-                    </connections>
-                </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Al-UT-Y08">
-                    <rect key="frame" x="10" y="239.5" width="300" height="228.5"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome" translatesAutoresizingMaskIntoConstraints="NO" id="MFQ-8t-Ukt">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="228.5"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="300" id="pSJ-ou-ekd"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="MFQ-8t-Ukt" firstAttribute="centerY" secondItem="1Al-UT-Y08" secondAttribute="centerY" id="OFO-Bx-msF"/>
-                        <constraint firstItem="MFQ-8t-Ukt" firstAttribute="centerX" secondItem="1Al-UT-Y08" secondAttribute="centerX" id="iuh-Z3-RxO"/>
-                        <constraint firstAttribute="width" constant="300" id="mIQ-Vu-gG8"/>
-                        <constraint firstItem="MFQ-8t-Ukt" firstAttribute="height" secondItem="1Al-UT-Y08" secondAttribute="height" id="pkP-Yc-EHT"/>
-                    </constraints>
-                </view>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="MainBlue"/>
             <constraints>
-                <constraint firstItem="xLS-Ip-lcv" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Qie-fY-ThG"/>
-                <constraint firstItem="1Al-UT-Y08" firstAttribute="top" secondItem="xLS-Ip-lcv" secondAttribute="bottom" constant="20" id="hEJ-l9-kPu"/>
-                <constraint firstItem="38Q-wh-Rcw" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="ici-PD-KvA"/>
-                <constraint firstItem="xLS-Ip-lcv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="50" id="k0Q-54-gJe"/>
-                <constraint firstItem="38Q-wh-Rcw" firstAttribute="top" secondItem="1Al-UT-Y08" secondAttribute="bottom" constant="20" id="k6F-0T-ugD"/>
-                <constraint firstItem="1Al-UT-Y08" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="kF9-7X-s3r"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="38Q-wh-Rcw" secondAttribute="bottom" constant="30" id="vX0-6J-1U2"/>
+                <constraint firstItem="OdI-dQ-nVw" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="BiS-wc-WR9"/>
+                <constraint firstItem="OdI-dQ-nVw" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Yko-q0-aw2"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
+            <point key="canvasLocation" x="46.875" y="34.859154929577464"/>
         </view>
     </objects>
     <resources>
-        <image name="welcome" width="375" height="325"/>
+        <image name="logo" width="190" height="183"/>
+        <namedColor name="MainBlue">
+            <color red="0.14499999582767487" green="0.10999999940395355" blue="0.63499999046325684" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
     </resources>
 </document>
