--- a/YourCityEvents/Modules/Feed/Cell/View/FeedCell.xib
+++ b/YourCityEvents/Modules/Feed/Cell/View/FeedCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -21,79 +22,75 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rwx-pk-gbK" customClass="ShadowView" customModule="YourCityEvents" customModuleProvider="target">
-                        <rect key="frame" x="18" y="8" width="378" height="124"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oFU-0g-5fQ">
+                        <rect key="frame" x="135" y="23.5" width="269" height="93.5"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome" translatesAutoresizingMaskIntoConstraints="NO" id="PM4-tS-q7n">
-                                <rect key="frame" x="15" y="12" width="100" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="0U8-K0-8eh"/>
-                                    <constraint firstAttribute="width" constant="100" id="qzl-7P-noK"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Q9N-2z-V5i">
-                                <rect key="frame" x="130" y="15" width="233" height="94"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zGS-ap-KzR">
+                                <rect key="frame" x="0.0" y="0.0" width="63" height="15"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hfc-8k-e3S">
-                                        <rect key="frame" x="0.0" y="0.0" width="63" height="15"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="date" translatesAutoresizingMaskIntoConstraints="NO" id="SMJ-oK-b0a">
-                                                <rect key="frame" x="0.0" y="0.0" width="13" height="15"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="15" id="MMc-VU-dWm"/>
-                                                    <constraint firstAttribute="width" constant="13" id="qkU-IG-jTv"/>
-                                                </constraints>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3z-Nh-4Rz">
-                                                <rect key="frame" x="21" y="0.0" width="42" height="15"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Presentation of new Apple device" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L1R-wW-DVh">
-                                        <rect key="frame" x="0.0" y="23" width="166" height="42.5"/>
-                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="18"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kyiv, Ukraine" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUH-Ai-IyO">
-                                        <rect key="frame" x="0.0" y="73.5" width="98" height="20.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="date" translatesAutoresizingMaskIntoConstraints="NO" id="e8P-pk-lJI">
+                                        <rect key="frame" x="0.0" y="0.0" width="13" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="3nz-ly-Uau"/>
+                                            <constraint firstAttribute="width" constant="13" id="vRJ-kF-8bY"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MYs-pa-UWN">
+                                        <rect key="frame" x="21" y="0.0" width="42" height="15"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Presentation of new Apple device" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ls-ac-KZU">
+                                <rect key="frame" x="0.0" y="23" width="165.5" height="42"/>
+                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kyiv, Ukraine" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLs-tr-X5a">
+                                <rect key="frame" x="0.0" y="73" width="98" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wzy-51-EZj">
+                        <rect key="frame" x="20" y="139" width="374" height="1"/>
+                        <color key="backgroundColor" name="Grey"/>
                         <constraints>
-                            <constraint firstItem="Q9N-2z-V5i" firstAttribute="top" secondItem="Rwx-pk-gbK" secondAttribute="top" constant="15" id="Fdb-dN-iP6"/>
-                            <constraint firstItem="PM4-tS-q7n" firstAttribute="top" secondItem="Rwx-pk-gbK" secondAttribute="top" constant="12" id="It8-jD-2NH"/>
-                            <constraint firstAttribute="trailing" secondItem="Q9N-2z-V5i" secondAttribute="trailing" constant="15" id="LBf-Hc-tyR"/>
-                            <constraint firstItem="PM4-tS-q7n" firstAttribute="leading" secondItem="Rwx-pk-gbK" secondAttribute="leading" constant="15" id="bge-xm-kMt"/>
-                            <constraint firstAttribute="bottom" secondItem="Q9N-2z-V5i" secondAttribute="bottom" constant="15" id="e1Y-jR-Yuh"/>
-                            <constraint firstItem="Q9N-2z-V5i" firstAttribute="leading" secondItem="PM4-tS-q7n" secondAttribute="trailing" constant="15" id="eVn-CE-ozo"/>
-                            <constraint firstAttribute="bottom" secondItem="PM4-tS-q7n" secondAttribute="bottom" constant="12" id="vW5-7D-ka2"/>
+                            <constraint firstAttribute="height" constant="1" id="WoJ-5d-YrV"/>
                         </constraints>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome" translatesAutoresizingMaskIntoConstraints="NO" id="xzC-dx-q68">
+                        <rect key="frame" x="20" y="20" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="0RM-wp-qFh"/>
+                            <constraint firstAttribute="width" constant="100" id="zEC-j5-3S4"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Rwx-pk-gbK" firstAttribute="leading" secondItem="ehP-uR-xgx" secondAttribute="leading" constant="18" id="5dd-Cb-nsz"/>
-                    <constraint firstItem="Rwx-pk-gbK" firstAttribute="top" secondItem="ehP-uR-xgx" secondAttribute="top" constant="8" id="MEG-ac-3gl"/>
-                    <constraint firstAttribute="trailing" secondItem="Rwx-pk-gbK" secondAttribute="trailing" constant="18" id="Nxq-6u-DSL"/>
-                    <constraint firstAttribute="bottom" secondItem="Rwx-pk-gbK" secondAttribute="bottom" constant="8" id="dR7-1f-sOW"/>
+                    <constraint firstItem="xzC-dx-q68" firstAttribute="top" secondItem="ehP-uR-xgx" secondAttribute="top" constant="20" id="2qW-tp-GsY"/>
+                    <constraint firstAttribute="bottom" secondItem="xzC-dx-q68" secondAttribute="bottom" constant="20" id="7ns-xI-K0C"/>
+                    <constraint firstAttribute="trailing" secondItem="Wzy-51-EZj" secondAttribute="trailing" constant="20" id="FQG-YW-bsk"/>
+                    <constraint firstAttribute="bottom" secondItem="Wzy-51-EZj" secondAttribute="bottom" id="LB1-Hz-bOt"/>
+                    <constraint firstItem="Wzy-51-EZj" firstAttribute="leading" secondItem="ehP-uR-xgx" secondAttribute="leading" constant="20" id="QxW-xC-Tm3"/>
+                    <constraint firstAttribute="trailing" secondItem="oFU-0g-5fQ" secondAttribute="trailing" constant="10" id="Tob-yC-hgv"/>
+                    <constraint firstItem="oFU-0g-5fQ" firstAttribute="centerY" secondItem="ehP-uR-xgx" secondAttribute="centerY" id="i6y-i2-y6i"/>
+                    <constraint firstItem="xzC-dx-q68" firstAttribute="leading" secondItem="ehP-uR-xgx" secondAttribute="leading" constant="20" id="y6i-N6-Aes"/>
+                    <constraint firstItem="oFU-0g-5fQ" firstAttribute="leading" secondItem="xzC-dx-q68" secondAttribute="trailing" constant="15" id="yk5-Fr-mYi"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="dateLabel" destination="G3z-Nh-4Rz" id="ojP-8o-SrO"/>
-                <outlet property="eventImageView" destination="PM4-tS-q7n" id="2w8-fb-e2E"/>
-                <outlet property="locationLabel" destination="XUH-Ai-IyO" id="3HP-mZ-tFy"/>
-                <outlet property="myContentView" destination="Rwx-pk-gbK" id="KDa-Ue-YN1"/>
-                <outlet property="titleLabel" destination="L1R-wW-DVh" id="ZUS-jY-fVW"/>
+                <outlet property="dateLabel" destination="MYs-pa-UWN" id="JqA-Lq-bfn"/>
+                <outlet property="eventImageView" destination="xzC-dx-q68" id="bCC-1I-sLS"/>
+                <outlet property="locationLabel" destination="kLs-tr-X5a" id="02q-Ir-gCA"/>
+                <outlet property="titleLabel" destination="6Ls-ac-KZU" id="wut-4R-e8I"/>
             </connections>
             <point key="canvasLocation" x="142" y="179"/>
         </tableViewCell>
@@ -101,5 +98,8 @@
     <resources>
         <image name="date" width="14" height="15"/>
         <image name="welcome" width="375" height="325"/>
+        <namedColor name="Grey">
+            <color red="0.76899999380111694" green="0.76899999380111694" blue="0.76899999380111694" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
     </resources>
 </document>
